# matrix-models

./: .gitignore  README.md
data/: README.md  clean_data.sh  generate_data.sh
data/gap_scripts/: coset_reps.g  demo_ct.g  demo_dc.g  demo_dc_bis.g  demo_ssct.g  generate_coset_reps.g  generate_ct.g  generate_dc.g  generate_ssct.g  main.g
data/raw/: baseline.txt  baseline_numpy.txt
mathematica/: README.md  generate_wc.wls
mathematica/notebooks/: 01_LadderAlgebra_OperatorTesting_demo.nb  02_MatrixModels_demo.nb
mathematica/tests/: LadderAlgebra_test.nb  MatrixModels_test.nb  OperatorTesting_test.nb
python/: README.md  pyproject.toml
python/notebooks/: 00_demo.ipynb  00_template.ipynb  01_analyze-hamiltonian.ipynb  02_compare-dense-sparse.ipynb
python/scripts/: benchmark_parallel.py  prepare_coset_input.py  prepare_observables.py  update_prob_collection.py
python/sym_contractions/: __init__.py  _numba_kernels.py  bruteforce.py  character_tables.py  coset.py  efficient.py  estimator.py  hamiltonian.py  store.py  utils.py  woven.py
python/tests/: test_bruteforce.py  test_character_tables.py  test_coset.py  test_efficient.py  test_estimator.py  test_hamiltonian.py  test_store.py  test_woven.py
