[project]
name = "sym-contractions"
version = "0.3.0"
description = "Symmetric group contraction computations for matrix models"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dash>=3.2.0",
    "h5py>=3.16.0",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.8",
    "nbformat>=5.10.4",
    "numba>=0.63.1",
    "pandas>=3.0.0",
    "plotly>=6.6.0",
    "scipy>=1.17.1",
    "tqdm>=4.67.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "scalene>=2.1.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["sym_contractions"]

[tool.pytest.ini_options]
addopts = ["--maxfail=1", "--cov=sym_contractions", "--cov-report=term-missing"]
testpaths = ["tests"]
